Adjusted resources margin which was not fitting well on mobile devices and fixed odd stretching of iotd on larger screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -242,6 +242,7 @@ p
     color: hsl(200, 5%, 13%);
     margin: 3% 3%;
     padding: 4%;
+    max-width: 1150px;
     -webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
     -o-transition: all 0.5s ease-out;
@@ -519,7 +520,7 @@ footer {
         margin: 0;
     }
     
-    .resources {
-        margin: 5px;
+    .resources a {
+        margin: 0 5px;
     }
 }
